@@ -6,6 +6,13 @@ found in the git revision history:
     http://www.canonware.com/cgi-bin/gitweb.cgi?p=jemalloc.git
     git://canonware.com/jemalloc.git
 
+* 3.x.x (XXX Not yet released)
+
+  Bug fixes:
+  - Fix TLS-related memory corruption that could occur during thread exit if the
+    thread never allocated memory.  Only the quarantine and prof facilities were
+    susceptible.
+
 * 3.3.0 (January 23, 2013)
 
   This version includes a few minor performance improvements in addition to the
